# movies-dataset-task

./: README.md  pyproject.toml  requirements.txt
config/: config-main.json  config-test.json  config.json
data/movies_dataset/json/: average_movies_rating.json  movies_by_genre.json  movies_released_by_year.json  top_5_rated_movies.json  unique_movies.json
data/test_datasets/csv/: genres.csv  movies_metadata.csv  ratings_small.csv
data/test_datasets/json/: average_movies_rating.json  genres.json  movies_by_genre.json  movies_metadata.json  movies_released_by_year.json  ratings.json  top_5_rated_movies.json  unique_movies.json
movies_dataset/: genres.csv
movies_dataset/json/: movies_released_by_year.json
src/: main.py  movies.py  movies_dataset_class.py  test_utils.py  utils.py
tests/: test_movies_dataset_class.py
