[build-system]
requires = [
    "setuptools>=61.0",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "movies-dataset-task-Stanislav-Tsanev"
version = "0.0.5"
authors = [
  { name="Stanislav Tsanev", email="s.tsanev95@abv.bg" },
]
description = "Movies Dataset Task"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "colorama==0.4.6",
    "exceptiongroup==1.2.0",
    "greenlet==3.0.3",
    "iniconfig==2.0.0",
    "numpy==1.26.4",
    "packaging==24.0",
    "pandas==2.2.1",
    "pandasql==0.7.3",
    "pluggy==1.4.0",
    "pytest==8.1.1",
    "python-dateutil==2.9.0.post0",
    "pytz==2024.1",
    "six==1.16.0",
    "SQLAlchemy==2.0.29",
    "tomli==2.0.1",
    "typing-extensions==4.10.0",
    "tzdata==2024.1",
]

[project.urls]
Homepage = "https://github.com/pypa/sampleproject"
Issues = "https://github.com/pypa/sampleproject/issues"